--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,82 @@
   padding:0;
   margin:0;
 }
+
+body{
+margin: 0;
+display:flex;
+justify-content: center;
+
+}
+
+#container{
+
+  width: 1000px;
+
+}
+header{
+
+  background: grey;
+  height: 100px;
+  padding: 10px
+}
+
+.bovenbalk{
+
+  background-color: rgb(255, 255, 255);
+  display:flex;
+  justify-content: space-between;
+
+  border-style: solid;
+  border-width: 2px;
+}
+
+.bovenbalk .menurechts{
+
+display: flex;
+align-items: flex-start;
+
+  padding: 10px;
+}
+.bovenbalk .menulinks{
+  display: flex;
+  align-items: flex-start;
+  
+    padding: 10px;
+
+}
+
+.onderbalk{
+  background-color: rgb(255, 255, 255);
+  display:flex;
+  justify-content: space-between;
+
+  border-style: solid;
+  border-width: 2px;
+}
+
+
+main{
+
+  display: flex;
+  flex-direction: row;
+  
+background: rgb(222, 131, 131)
+
+
+}
+
+
+
+
+footer{
+height: 100px;
+background:black
+}
+
+#filter{
+
+  background: blue;
+  display: inline;
+  
+}
